The architecture is almost ready. Started to do registration and authorization process

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BOT_TOKEN = 7768622346:AAHeM0Sz6qibXT2aweV4qj7f3UF88zqzJI0
 TOGETHER_API_KEY = tgp_v1_MYSvN6Zd6Vx579knSU4fqWfoSoWXoD053JrnvPab6rM
 SQLALCHEMY_URL = postgresql+asyncpg://edubotdb:rjcnzysx2311@localhost:5432/edubotdb
+ADMIN_TG_ID = 738490613
