--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ dependencies = [
     "dvc>=3.59.1",
     "greenlet>=3.1.1",
     "hydra-core>=1.3.2",
+    "ipykernel>=6.29.5",
+    "jupyter>=1.1.1",
     "omegaconf>=2.3.0",
+    "pandas>=2.2.3",
     "pydantic>=2.10.6",
     "pymongo>=4.11.2",
     "python-telegram-bot>=21.11.1",
