Main functionality is ready to use

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 BOT_TOKEN = 7768622346:AAHeM0Sz6qibXT2aweV4qj7f3UF88zqzJI0
 TOGETHER_API_KEY = tgp_v1_MYSvN6Zd6Vx579knSU4fqWfoSoWXoD053JrnvPab6rM
 SQLALCHEMY_URL = postgresql+asyncpg://edubotdb:rjcnzysx2311@localhost:5432/edubotdb
+SQLALCHEMY_URL_SYNC = postgresql+psycopg2://edubotdb:rjcnzysx2311@localhost:5432/edubotdb
 ADMIN_TG_ID = 738490613
+YANDEX_OAUTH_TOKEN = y0__xDG0f_RBhjB3RMgqIOlxBLXiQVFvLEH0YHjRXd1QFSFbc1dPw
+IAM_TOKEN = t1.9euelZqdjMeUmpuJjc-Nk42Wy5uJne3rnpWayZuenZmMi4nIjsyex5ePjp7l8_d4fjNB-e9JLkNj_N3z9zgtMUH570kuQ2P8zef1656Vms2OjJKPmsmbmZqeiZiWlJbJ7_zF656Vms2OjJKPmsmbmZqeiZiWlJbJ.eeBeAYA21CBZT3eI87PSM_RHKK_vR3wHfriUE2MomleYi8S-dPARSJ164OrkjoHRw--CqklL5OT4NTTPe5meCg
+YC_CATALOGUE_ID = b1gfpmkudda2c9s6jrc9
